--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "scripts": {
     "build:chronoblog": "yarn clean && yarn workspace gatsby-starter-chronoblog build",
     "clean": "yarn workspaces run clean",
-    "start:chronoblog": "yarn clean && yarn workspace gatsby-starter-chronoblog start"
+    "start:chronoblog": "yarn clean && yarn workspace gatsby-starter-chronoblog start",
+    "lint": "eslint './gatsby-theme-chronoblog/**/*' './starters/**/*'",
+    "lint:fix": "yarn lint --fix"
   },
   "devDependencies": {
     "@types/node": "^12.0.12",
@@ -37,5 +39,16 @@
     "prettier": "^1.18.2",
     "typescript": "^3.5.2",
     "yarn": "^1.17.3"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged && yarn build:chronoblog"
+    }
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --fix",
+      "git add"
+    ]
   }
 }
