--- a/package.json
+++ b/package.json
@@ -10,9 +10,7 @@
   "scripts": {
     "build:chronoblog": "yarn clean && yarn workspace gatsby-starter-chronoblog build",
     "clean": "yarn workspaces run clean",
-    "start:chronoblog": "yarn clean && yarn workspace gatsby-starter-chronoblog start",
-    "lint": "eslint './gatsby-theme-chronoblog/**/*' './starters/**/*'",
-    "lint:fix": "yarn lint --fix"
+    "start:chronoblog": "yarn clean && yarn workspace gatsby-starter-chronoblog start"
   },
   "devDependencies": {
     "@types/node": "^12.0.12",
