--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
   },
   "include": ["./src/**/*", "*/**/src/**/*"],
   "exclude": [
+    "node_modules",
     "node_modules/**/*",
     "*/node_modules/**/*",
     "*/**/node_modules/**/*"
