--- a/packages/gatsby-theme-chronoblog/package.json
+++ b/packages/gatsby-theme-chronoblog/package.json
@@ -2,13 +2,7 @@
   "name": "gatsby-theme-chronoblog",
   "version": "0.0.1",
   "description": "gatsby-theme-chronoblog",
-  "keywords": [
-    "blog",
-    "gatsby",
-    "gatsby-plugin",
-    "gatsby-theme",
-    "react"
-  ],
+  "keywords": ["blog", "gatsby", "gatsby-plugin", "gatsby-theme", "react"],
   "homepage": "https://github.com/Ganevru/gatsby-theme-chronoblog",
   "repository": {
     "type": "git",
@@ -31,16 +25,17 @@
     "debug": "^4.1.1",
     "gatsby": "^2.13.41",
     "gatsby-plugin-emotion": "^4.1.2",
-    "gatsby-plugin-feed": "^2.3.5",
     "gatsby-plugin-mdx": "^1.0.17",
     "gatsby-plugin-react-helmet": "^3.1.2",
     "gatsby-plugin-theme-ui": "^0.2.18",
     "gatsby-source-filesystem": "^2.1.6",
     "mkdirp": "^0.5.1",
+    "normalize-url": "^4.3.0",
     "react-helmet": "^5.2.1",
     "remark-slug": "^5.1.2",
     "remark-unwrap-images": "^0.2.0",
-    "theme-ui": "^0.2.18"
+    "theme-ui": "^0.2.18",
+    "url-join": "^4.0.1"
   },
   "devDependencies": {
     "gatsby": "^2.13.41",
