--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build:base": "yarn clean && yarn workspace base build",
     "clean": "yarn workspaces run clean",
     "start:base": "yarn clean && yarn workspace base start",
-    "test": "jest"
+    "test": "yarn clean && jest",
+    "watch": "yarn clean && jest --watch"
   },
   "devDependencies": {
     "@types/jest": "^24.0.16",
@@ -18,6 +19,8 @@
     "@types/react-helmet": "^5.0.8",
     "@typescript-eslint/eslint-plugin": "^1.11.0",
     "@typescript-eslint/parser": "^1.11.0",
+    "babel-jest": "^24.8.0",
+    "babel-preset-gatsby": "^0.2.8",
     "eslint": "^5.3.0",
     "eslint-config-airbnb": "^17.1.1",
     "eslint-config-prettier": "^6.0.0",
@@ -32,9 +35,11 @@
     "eslint-plugin-sonarjs": "^0.4.0",
     "eslint-plugin-unicorn": "^9.1.1",
     "husky": "^3.0.1",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^24.8.0",
     "lint-staged": "^9.2.1",
     "prettier": "^1.18.2",
+    "react-test-renderer": "^16.8.6",
     "typescript": "^3.5.2",
     "yarn": "^1.17.3"
   },
