--- a/packages/gatsby-theme-chronoblog/package.json
+++ b/packages/gatsby-theme-chronoblog/package.json
@@ -2,7 +2,13 @@
   "name": "gatsby-theme-chronoblog",
   "version": "0.0.1",
   "description": "gatsby-theme-chronoblog",
-  "keywords": ["blog", "gatsby", "gatsby-plugin", "gatsby-theme", "react"],
+  "keywords": [
+    "blog",
+    "gatsby",
+    "gatsby-plugin",
+    "gatsby-theme",
+    "react"
+  ],
   "homepage": "https://github.com/Ganevru/gatsby-theme-chronoblog",
   "repository": {
     "type": "git",
@@ -22,14 +28,16 @@
     "@emotion/core": "^10.0.14",
     "@mdx-js/mdx": "^1.1.0",
     "@mdx-js/react": "^1.0.27",
+    "@types/lodash": "^4.14.136",
     "debug": "^4.1.1",
     "gatsby": "^2.13.41",
     "gatsby-plugin-emotion": "^4.1.2",
     "gatsby-plugin-mdx": "^1.0.17",
+    "gatsby-plugin-page-creator": "^2.1.5",
     "gatsby-plugin-react-helmet": "^3.1.2",
     "gatsby-plugin-theme-ui": "^0.2.18",
     "gatsby-source-filesystem": "^2.1.6",
-    "gatsby-plugin-page-creator": "^2.1.5",
+    "lodash": "^4.17.15",
     "mkdirp": "^0.5.1",
     "normalize-url": "^4.3.0",
     "react-helmet": "^5.2.1",
