--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "checkJs": true,
     "esModuleInterop": true,
     "jsx": "react",
-    "lib": ["dom", "es2017", "dom.iterable", "es2018"],
+    "lib": ["dom", "es2017", "es2019", "dom.iterable", "es2018"],
     "module": "esnext",
     "moduleResolution": "node",
     "noEmit": true,
