--- a/.eslintrc
+++ b/.eslintrc
@@ -48,12 +48,11 @@
     "jsx-a11y"
   ],
   "rules": {
-    "import/no-extraneous-dependencies": "warn",
-    "react/jsx-key": "warn",
     "@typescript-eslint/no-var-requires": "off",
     "import/first": "warn",
     "import/newline-after-import": "warn",
     "import/no-duplicates": "warn",
+    "import/no-extraneous-dependencies": "warn",
     "import/order": "warn",
     "jsdoc/check-tag-names": [
       "warn",
@@ -66,6 +65,7 @@
     "jsdoc/require-returns": "off",
     "jsdoc/require-returns-description": "off",
     "jsdoc/valid-types": "off",
+    "jsx-a11y/label-has-associated-control": "off",
     "no-console": "off",
     "no-nested-ternary": "warn",
     "prettier/prettier": "warn",
@@ -79,6 +79,7 @@
         "extensions": [".js", ".jsx", ".tsx", "md", "mdx"]
       }
     ],
+    "react/jsx-key": "warn",
     "react/prop-types": "off",
     "simple-import-sort/sort": "warn",
     "sonarjs/cognitive-complexity": "warn",
