--- a/.eslintrc
+++ b/.eslintrc
@@ -75,6 +75,8 @@
     "react/display-name": "off",
     "react/jsx-indent": "off",
     "react/button-has-type": "warn",
+    "react/jsx-one-expression-per-line": "off",
+    "jsx-a11y/accessible-emoji": "warn",
     "react/jsx-filename-extension": [
       "warn",
       {
