--- a/packages/gatsby-theme-chronoblog/package.json
+++ b/packages/gatsby-theme-chronoblog/package.json
@@ -28,6 +28,7 @@
     "@emotion/core": "^10.0.14",
     "@mdx-js/mdx": "^1.1.0",
     "@mdx-js/react": "^1.0.27",
+    "@reach/router": "^1.2.1",
     "@theme-ui/preset-base": "^0.2.29",
     "@types/lodash": "^4.14.136",
     "debug": "^4.1.1",
@@ -41,6 +42,7 @@
     "lodash": "^4.17.15",
     "mkdirp": "^0.5.1",
     "normalize-url": "^4.3.0",
+    "query-string": "^6.8.2",
     "react-helmet": "^5.2.1",
     "remark-slug": "^5.1.2",
     "remark-unwrap-images": "^0.2.0",
