--- a/packages/gatsby-theme-chronoblog/package.json
+++ b/packages/gatsby-theme-chronoblog/package.json
@@ -33,12 +33,17 @@
     "@types/lodash": "^4.14.136",
     "debug": "^4.1.1",
     "gatsby": "^2.13.52",
+    "gatsby-background-image": "^0.8.5",
+    "gatsby-image": "^2.2.9",
     "gatsby-plugin-emotion": "^4.1.2",
     "gatsby-plugin-mdx": "^1.0.17",
     "gatsby-plugin-page-creator": "^2.1.5",
     "gatsby-plugin-react-helmet": "^3.1.2",
+    "gatsby-plugin-sharp": "^2.2.12",
     "gatsby-plugin-theme-ui": "^0.2.18",
+    "gatsby-remark-images": "^3.1.12",
     "gatsby-source-filesystem": "^2.1.6",
+    "gatsby-transformer-sharp": "^2.2.6",
     "lodash": "^4.17.15",
     "mkdirp": "^0.5.1",
     "normalize-url": "^4.3.0",
