--- a/packages/gatsby-theme-chronoblog/package.json
+++ b/packages/gatsby-theme-chronoblog/package.json
@@ -2,7 +2,13 @@
   "name": "gatsby-theme-chronoblog",
   "version": "0.0.1",
   "description": "gatsby-theme-chronoblog",
-  "keywords": ["blog", "gatsby", "gatsby-plugin", "gatsby-theme", "react"],
+  "keywords": [
+    "blog",
+    "gatsby",
+    "gatsby-plugin",
+    "gatsby-theme",
+    "react"
+  ],
   "homepage": "https://github.com/Ganevru/gatsby-theme-chronoblog",
   "repository": {
     "type": "git",
@@ -31,10 +37,12 @@
     "gatsby-image": "^2.2.9",
     "gatsby-plugin-emotion": "^4.1.2",
     "gatsby-plugin-mdx": "^1.0.17",
+    "gatsby-plugin-meta-redirect": "^1.1.1",
     "gatsby-plugin-page-creator": "^2.1.5",
     "gatsby-plugin-react-helmet": "^3.1.2",
     "gatsby-plugin-sharp": "^2.2.12",
     "gatsby-plugin-theme-ui": "^0.2.18",
+    "gatsby-redirect-from": "^0.2.1",
     "gatsby-remark-images": "^3.1.12",
     "gatsby-source-filesystem": "^2.1.6",
     "gatsby-transformer-sharp": "^2.2.6",
