--- a/starters/chronoblog/package.json
+++ b/starters/chronoblog/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "gatsby-starter-chronoblog",
+  "name": "chronoblog",
+  "private": true,
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
