config default values and del tests ex

--- a/.eslintrc
+++ b/.eslintrc
@@ -65,27 +65,28 @@
     "jsdoc/require-returns": "off",
     "jsdoc/require-returns-description": "off",
     "jsdoc/valid-types": "off",
+    "jsx-a11y/accessible-emoji": "warn",
     "jsx-a11y/label-has-associated-control": "off",
     "no-console": "off",
     "no-nested-ternary": "warn",
+    "no-param-reassign": "off",
+    "prefer-const": "warn",
     "prettier/prettier": "warn",
     "react-hooks/exhaustive-deps": "warn",
     "react-hooks/rules-of-hooks": "error",
+    "react/button-has-type": "warn",
     "react/destructuring-assignment": "warn",
     "react/display-name": "off",
-    "react/jsx-indent": "off",
-    "react/button-has-type": "warn",
-    "react/no-children-prop": "warn",
-    "prefer-const": "warn",
-    "react/jsx-one-expression-per-line": "off",
-    "jsx-a11y/accessible-emoji": "warn",
     "react/jsx-filename-extension": [
       "warn",
       {
         "extensions": [".js", ".jsx", ".tsx", "md", "mdx"]
       }
     ],
+    "react/jsx-indent": "off",
     "react/jsx-key": "warn",
+    "react/jsx-one-expression-per-line": "off",
+    "react/no-children-prop": "warn",
     "react/prop-types": "off",
     "simple-import-sort/sort": "warn",
     "sonarjs/cognitive-complexity": "warn",
