--- a/package.json
+++ b/package.json
@@ -3,12 +3,11 @@
   "private": true,
   "license": "MIT",
   "author": "Ivan Ganev <ganevio92@gmail.com>",
-  "workspaces": ["packages/*", "tests/*", "starters/*"],
+  "workspaces": ["packages/*", "starters/*"],
   "scripts": {
-    "build:test": "yarn clean && yarn workspace test build",
+    "build:chronoblog": "yarn clean && yarn workspace chronoblog build",
     "build:minimal": "yarn clean && yarn workspace minimal build",
     "clean": "yarn workspaces run clean",
-    "start:test": "yarn clean && yarn workspace test start",
     "start:chronoblog": "yarn clean && yarn workspace chronoblog start",
     "start:minimal": "yarn clean && yarn workspace minimal start",
     "test": "yarn clean && jest",
@@ -16,7 +15,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "yarn test && yarn build:test && lint-staged"
+      "pre-commit": "yarn test && yarn build:minimal && lint-staged"
     }
   },
   "lint-staged": {
