--- a/starters/minimal/package.json
+++ b/starters/minimal/package.json
@@ -12,7 +12,7 @@
   "author": "Ivan Ganev <ganevio92@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "gatsby-theme-chronoblog": "*",
+    "gatsby-theme-chronoblog": "^0.0.3",
     "gatsby": "^2.13.52",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
