--- a/starters/chronoblog/package.json
+++ b/starters/chronoblog/package.json
@@ -1,8 +1,7 @@
 {
   "name": "chronoblog",
-  "private": true,
   "version": "1.0.0",
-  "description": "",
+  "description": "gatsby-starter-chronoblog",
   "scripts": {
     "clean": "gatsby clean",
     "start": "gatsby develop",
@@ -12,7 +11,7 @@
   "author": "Ivan Ganev <ganevio92@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "gatsby-theme-chronoblog": "^0.0.4",
+    "gatsby-theme-chronoblog": "^0.0.5",
     "gatsby": "^2.15.15",
     "react": "^16.9.0",
     "react-dom": "^16.9.0"
