--- a/starters/minimal/package.json
+++ b/starters/minimal/package.json
@@ -2,18 +2,19 @@
   "name": "minimal",
   "version": "1.0.0",
   "description": "gatsby-starter-minimal",
-  "scripts": {
-    "clean": "gatsby clean",
-    "start": "gatsby develop",
-    "build": "gatsby build"
-  },
   "keywords": [],
-  "author": "Ivan Ganev <ganevio92@gmail.com>",
   "license": "MIT",
+  "author": "Ivan Ganev <ganevio92@gmail.com>",
+  "scripts": {
+    "build": "gatsby build",
+    "clean": "gatsby clean",
+    "start": "gatsby develop"
+  },
   "dependencies": {
-    "gatsby-theme-chronoblog": "^0.0.6",
     "gatsby": "^2.15.28",
+    "gatsby-theme-chronoblog": "^0.0.6",
     "react": "^16.10.1",
     "react-dom": "^16.10.1"
-  }
+  },
+  "starter-name": "gatsby-starter-minimal"
 }
