npm install yarn

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -18,6 +18,7 @@ jobs:
 
       - name: yarn, test, build
         run: |
+          npm install yarn
           yarn
           yarn test
           yarn build:chronoblog
