npm install --global yarn

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -18,7 +18,7 @@ jobs:
 
       - name: yarn, test, build
         run: |
-          npm install yarn
+          npm install --global yarn
           yarn
           yarn test
           yarn build:chronoblog
