--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,25 +1,28 @@
 name: Tests
 on: [push]
 jobs:
-  test:
+  tests:
     name: Test on node ${{ matrix.node_version }} and ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         node_version: [10, 12]
-        os: [ubuntu-latest, macos-latest]
+        os: [ubuntu-latest, macos-latest, windows-latest]
     steps:
       - uses: actions/checkout@v1
 
       - name: Use Node.js ${{ matrix.node_version }}
         uses: actions/setup-node@v1
         with:
-          version: ${{ matrix.node_version }}
+          node-version: ${{ matrix.node_version }}
 
-      - name: yarn, test, build
+      - name: yarn install
         run: |
           npm install --global yarn
           yarn
-          yarn test
-          yarn build:chronoblog
-          yarn build:minimal
+      - name: yarn test
+        run: yarn test
+      - name: yarn build:chronoblog
+        run: yarn build:chronoblog
+      - name: yarn build:minimal
+        run: yarn build:minimal
