--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,4 +1,4 @@
-name: Tests
+name:
 on: [push]
 jobs:
   tests:
@@ -7,7 +7,7 @@ jobs:
     strategy:
       matrix:
         node_version: [10, 12]
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest, macos-latest]
     steps:
       - uses: actions/checkout@v1
 
