--- a/.github/workflows/publish-starters.yml
+++ b/.github/workflows/publish-starters.yml
@@ -5,12 +5,12 @@ on:
       - master
 jobs:
   tests:
-    name: Test on node ${{ matrix.node_version }} and ${{ matrix.os }}
+    name: Test Starter ${{ matrix.starter }} on node ${{ matrix.node_version }} and ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         node_version: [10, 12]
-        os: [ubuntu-latest, macos-latest]
+        os: [ubuntu-latest, macos-latest, windows-latest]
         starter: [chronoblog, minimal]
     steps:
       - uses: actions/checkout@v1
@@ -20,7 +20,7 @@ jobs:
         with:
           node-version: ${{ matrix.node_version }}
 
-      - name: ${{ matrix.starter }}
+      - name: starter ${{ matrix.starter }}
         run: |
           cd starters/${{ matrix.starter }}/
           echo $PWD
