--- a/.github/workflows/publish-starters.yml
+++ b/.github/workflows/publish-starters.yml
@@ -5,6 +5,7 @@ on:
       - master
 jobs:
   tests:
+    timeout-minutes: 30
     name: Test Starter ${{ matrix.starter }} on node ${{ matrix.node_version }} and ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     strategy:
