--- a/.prettierignore
+++ b/.prettierignore
@@ -5,3 +5,15 @@ public
 .DS_Store
 node_modules
 CHANGELOG.md
+*.toml
+results
+.github
+typings.d.ts
+index.d.ts
+www/src/webgl/uniforms.js
+cypress/e2e/build
+LICENSE
+*.txt
+**/static/**
+**/*.hbs
+coverage
