publish-starters for chronoblog-netlify-cms

--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "workspaces": ["packages/*", "starters/*"],
   "scripts": {
     "build:chronoblog": "yarn clean && yarn workspace chronoblog build",
+    "build:chronoblog-netlify-cms": "yarn clean && yarn workspace chronoblog-netlify-cms build",
     "build:minimal": "yarn clean && yarn workspace minimal build",
     "clean": "yarn workspaces run clean",
     "lerna": "lerna",
     "start:chronoblog": "yarn clean && yarn workspace chronoblog start",
+    "start:chronoblog-netlify-cms": "yarn clean && yarn workspace chronoblog-netlify-cms start",
     "start:minimal": "yarn clean && yarn workspace minimal start",
     "test": "yarn clean && jest",
     "watch": "yarn clean && jest --watch"
