--- a/.github/workflows/publish-starters.yml
+++ b/.github/workflows/publish-starters.yml
@@ -12,7 +12,7 @@ jobs:
       matrix:
         node_version: [10, 12]
         os: [ubuntu-latest, macos-latest, windows-latest]
-        starter: [chronoblog, minimal]
+        starter: [chronoblog, chronoblog-netlify-cms, minimal]
     steps:
       - uses: actions/checkout@v1
 
