--- a/starters/chronoblog-netlify-cms/package.json
+++ b/starters/chronoblog-netlify-cms/package.json
@@ -24,5 +24,8 @@
     "react": "^16.10.1",
     "react-dom": "^16.10.1"
   },
+  "engines": {
+    "node": ">=10.15.0"
+  },
   "starter-name": "gatsby-starter-chronoblog-netlify-cms"
 }
