--- a/packages/gatsby-theme-chronoblog/package.json
+++ b/packages/gatsby-theme-chronoblog/package.json
@@ -2,13 +2,7 @@
   "name": "gatsby-theme-chronoblog",
   "version": "0.0.9",
   "description": "gatsby-theme-chronoblog",
-  "keywords": [
-    "blog",
-    "gatsby",
-    "gatsby-plugin",
-    "gatsby-theme",
-    "react"
-  ],
+  "keywords": ["blog", "gatsby", "gatsby-plugin", "gatsby-theme", "react"],
   "homepage": "https://github.com/Ganevru/gatsby-theme-chronoblog",
   "repository": {
     "type": "git",
@@ -25,14 +19,14 @@
   },
   "dependencies": {
     "@babel/core": "^7.6.2",
-    "@emotion/core": "^10.0.17",
+    "@emotion/core": "^10.0.21",
     "@mdx-js/mdx": "^1.5.0",
     "@mdx-js/react": "^1.5.0",
     "@reach/router": "^1.2.1",
     "@theme-ui/preset-base": "^0.2.40",
     "@types/lodash": "^4.14.138",
     "debug": "^4.1.1",
-    "gatsby": "^2.15.28",
+    "gatsby": "^2.15.29",
     "gatsby-background-image": "^0.8.11",
     "gatsby-image": "^2.2.19",
     "gatsby-plugin-emotion": "^4.1.9",
@@ -58,14 +52,14 @@
     "url-join": "^4.0.1"
   },
   "devDependencies": {
-    "gatsby": "^2.15.28",
-    "react": "^16.10.1",
-    "react-dom": "^16.10.1"
+    "gatsby": "^2.15.29",
+    "react": "^16.10.2",
+    "react-dom": "^16.10.2"
   },
   "peerDependencies": {
-    "gatsby": "^2.15.28",
-    "react": "^16.10.1",
-    "react-dom": "^16.10.1"
+    "gatsby": "^2.15.29",
+    "react": "^16.10.2",
+    "react-dom": "^16.10.2"
   },
   "engines": {
     "node": ">=10.15.0"
