--- a/starters/chronoblog-netlify-cms/package.json
+++ b/starters/chronoblog-netlify-cms/package.json
@@ -16,13 +16,14 @@
     "eslint-config-airbnb": "^17.1.1",
     "eslint-config-prettier": "^6.3.0",
     "eslint-plugin-prettier": "^3.1.0",
-    "gatsby": "^2.15.28",
+    "gatsby": "^2.15.29",
     "gatsby-plugin-netlify": "^2.1.17",
     "gatsby-plugin-netlify-cms": "^4.1.22",
     "gatsby-theme-chronoblog": "^0.0.9",
+    "netlify-cms-app": "^2.9.7",
     "prettier": "^1.18.2",
-    "react": "^16.10.1",
-    "react-dom": "^16.10.1"
+    "react": "^16.10.2",
+    "react-dom": "^16.10.2"
   },
   "engines": {
     "node": ">=10.15.0"
