--- a/starters/chronoblog-netlify-cms/package.json
+++ b/starters/chronoblog-netlify-cms/package.json
@@ -15,6 +15,7 @@
     "gatsby": "^2.15.29",
     "gatsby-plugin-netlify": "^2.1.17",
     "gatsby-plugin-netlify-cms": "^4.1.22",
+    "gatsby-remark-relative-images": "^0.2.3",
     "gatsby-theme-chronoblog": "^0.0.11",
     "netlify-cms-app": "^2.9.7",
     "react": "^16.10.2",
